versions/v2.11/modules/en/pages/cluster-admin/manage-clusters/manage-clusters.adoc
= Cluster Administration
:page-languages: [en, zh]
:revdate: 2025-03-12
:page-revdate: {revdate}
:page-community-path: how-to-guides/new-user-guides/manage-clusters/index.adoc 
:page-product-path: cluster-admin/manage-clusters/manage-clusters.adoc
ifeval::["{build-type}" != "community"]
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-cluster-deployment: xref:cluster-deployment/cluster-deployment.adoc
:xref-k8s-concepts: xref:about-rancher/concepts.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-cluster-deployment: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/index.adoc
:xref-k8s-concepts: xref:reference-guides/kubernetes-concepts.adoc
endif::[]

After you provision a cluster in Rancher, you can begin using powerful Kubernetes features to deploy and scale your containerized applications in development, testing, or production environments.

[NOTE]
====

This section assumes a basic familiarity with Docker and Kubernetes. For a brief explanation of how Kubernetes components work together, refer to the {xref-k8s-concepts}[concepts] page.
====


== Managing Clusters in Rancher

After clusters have been {xref-cluster-deployment}[provisioned into Rancher], {xref-cluster-project-roles}#_cluster_roles[cluster owners] will need to manage these clusters. There are many different options of how to manage your cluster.

include::shared:ROOT:partial$en/cluster-capabilities-table.adoc[]

== Configuring Tools

Rancher contains a variety of tools that aren't included in Kubernetes to assist in your DevOps operations. Rancher can integrate with external services to help your clusters run more efficiently. Tools are divided into the following categories:

* Alerts
* Notifiers
* Logging
* Monitoring
* Istio Service Mesh

Tools can be installed through *Apps.*
